infra/kafka/kafka-ui-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui-ingress
  namespace: strimzi 
  annotations:
    # Add any necessary annotations for your Ingress controller
    # For example, with Nginx Ingress Controller:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test.kafka-ui.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-ui
            port:
              number: 80
